--- a/scss/variables-site/_structure.scss
+++ b/scss/variables-site/_structure.scss
@@ -33,4 +33,4 @@ $btn-border-width: $border-width;
 $btn-border-radius: 0;
 
 // Easings
-$fadboilerplate-timing: cubic-bezier(0, 0.9, 0.13, 0.9);
+$challenge-timing: cubic-bezier(0, 0.9, 0.13, 0.9);
