--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /*!
-Theme Name: fadboilerplate
+Theme Name: challenge
 Theme URI: https://firstascentdesign.com/
 Author: First Ascent Design LLC
 Author URI: http://firstascentdesign.com
@@ -7,7 +7,7 @@ Description: Made with 💙 by the team at <a href="https://firstascentdesign.co
 Version: 1.0.0
 License: GNU General Public License v2 or later
 License URI: LICENSE
-Text Domain: fadboilerplate
+Text Domain: challenge
 
 This theme, like WordPress, is licensed under the GPL.
 
