--- a/blocks/new_example/_new_example.scss
+++ b/blocks/new_example/_new_example.scss
@@ -1,11 +1,11 @@
 /**
- * Example Block
+ * New Example Block
  * Styles for custom Gutenerg blocks.
  * Mobile first styling means that default styles are for the xs size
  *   and overrides are for larger sizes.
  */
 
-.block-example {
+.block-new-example {
 	&__container {
 	}
 
